[gd_scene load_steps=12 format=3 uid="uid://dp2pbdk57um5c"]

[ext_resource type="Texture2D" uid="uid://h5h6m1n5etb4" path="res://Enemies/enemy1/invader_type1f0.png" id="1_7js2s"]
[ext_resource type="Script" path="res://Enemies/enemy.gd" id="1_eqgy5"]
[ext_resource type="Texture2D" uid="uid://c0anitc7xd4xn" path="res://Enemies/enemy1/invader_type1f1.png" id="2_lr1qr"]
[ext_resource type="PackedScene" uid="uid://bs67rv4wx5g12" path="res://missile/missile.tscn" id="2_rqi62"]
[ext_resource type="Texture2D" uid="uid://ci484r0qvacps" path="res://Enemies/enemy_pop/enemy pop1.png" id="5_1stj8"]
[ext_resource type="Texture2D" uid="uid://cgma4fdukq4x4" path="res://Enemies/enemy_pop/enemy pop2.png" id="6_egnqg"]
[ext_resource type="Texture2D" uid="uid://byrpwdjb1vnfa" path="res://Enemies/enemy_pop/enemy pop3.png" id="7_akg3g"]
[ext_resource type="Texture2D" uid="uid://biequ6vwhjpfd" path="res://Enemies/enemy_pop/enemy pop4.png" id="8_fua0c"]
[ext_resource type="Texture2D" uid="uid://6pd50b870nnu" path="res://Enemies/enemy_pop/enemy pop5.png" id="9_yjw3u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mi1c6"]
size = Vector2(33, 35)

[sub_resource type="SpriteFrames" id="SpriteFrames_8qunh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_7js2s")
}, {
"duration": 1.0,
"texture": ExtResource("2_lr1qr")
}],
"loop": true,
"name": &"Flying",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_1stj8")
}, {
"duration": 1.0,
"texture": ExtResource("6_egnqg")
}, {
"duration": 1.0,
"texture": ExtResource("7_akg3g")
}, {
"duration": 1.0,
"texture": ExtResource("8_fua0c")
}, {
"duration": 1.0,
"texture": ExtResource("9_yjw3u")
}],
"loop": false,
"name": &"pop",
"speed": 15.0
}]

[node name="enemy1" type="RigidBody2D" groups=["Invaders"]]
collision_layer = 2
collision_mask = 8
gravity_scale = 0.0
can_sleep = false
lock_rotation = true
script = ExtResource("1_eqgy5")
missile_scene = ExtResource("2_rqi62")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -5.5)
shape = SubResource("RectangleShape2D_mi1c6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_8qunh")
animation = &"Flying"

[node name="Missiles" type="Node2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="wall_hit" from="." to="." method="_on_wall_hit"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
